--- a/websiteFiles/css_files/forms.css
+++ b/websiteFiles/css_files/forms.css
@@ -1,15 +1,12 @@
-
 /* ===== ===== ===== Panels ===== ===== ===== */
 .push-down {
     padding-top: 50px;
 }
 
-.scrollable-panel { /* Scrollable right panel */
-    height: 100vh;
-    overflow-y: auto;
-}
-
 /* ===== ===== ===== Left Panel ===== ===== ===== */
+.p-0 {
+    background: rgba(24, 20, 0, 0.5);
+}
 .p-4 { /* h1 Submit New Park*/
     color: white;
 }
@@ -22,14 +19,8 @@
 form {
     padding-top: 1em;
 }
-
-/* ===== ===== ===== Borderline in the Middle of Panels ===== ===== ===== */
-.custom-divider-left {
+.custom-divider{ /* Borderline in the middle of panels */
     border-left: 1em solid #FEFAE0 !important;
-}
-
-.custom-divider-top {
-    border-top: 1em solid #FEFAE0 !important;
 }
 
 /* ===== ===== ===== Buttons ===== ===== ===== */
