--- a/websiteFiles/css_files/style.css
+++ b/websiteFiles/css_files/style.css
@@ -1,3 +1,7 @@
+/* ===== ===== ===== General ===== ===== ===== */
+.body {
+    font-family: Verdana
+}
 /* ===== ===== ===== Background Image ===== ===== ===== */
 .bg-img {
     height: 125vh;
@@ -18,9 +22,12 @@
 
     position: fixed;
     width: 100%;
+    height: 65px;
 }
 .nav-link {
     transition: all 0.2s;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 .nav-link:hover {
     color: #FEFAE0;
@@ -33,6 +40,7 @@
 .our-goal-section {
     padding-top: 60px; /*To not make section look squished by navbar*/
     height: 100vh;
+    width: 100vw;
 
     display: flex;
     justify-content: center;
@@ -63,4 +71,26 @@
 /* ===== ===== ===== Texts ===== ===== ===== */
 h1 {
     color: white;;
+}
+
+/* ===== ===== ===== Tags ===== ===== ===== */
+.tags {
+    height: 4vh;
+    width: fit-content;
+    border-radius: 10px;
+    background-color: #626F47;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    display: flex;
+    padding: 10px;
+    font-weight: bold;
+}
+
+.remove-tag {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 1.2em;
+    padding-left: 10px;
 }
