--- a/websiteFiles/css_files/style.css
+++ b/websiteFiles/css_files/style.css
@@ -4,13 +4,16 @@
 }
 
 
-html {
+html, body {
     overflow-y: auto;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 /* ===== ===== ===== Background Image ===== ===== ===== */
 .bg-img {
-    height: 125vh;
+    height: 100vh;
     width: 100vw;
     object-fit: cover;
     filter: brightness(0.85);
